Refactor job crawling to use asynchronous requests with aiohttp. Added filtering for job titles and improved error handling. Updated main function to run all crawlers concurrently.

--- a/.github/workflows/job_crawler.yml
+++ b/.github/workflows/job_crawler.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install requests beautifulsoup4 datetime  # Cài thư viện cần thiết
+          pip install requests beautifulsoup4 datetime aiohttp  # Cài thư viện cần thiết
 
       - name: Run job crawler script
         run: python main.py  # Chạy script chính
