--- a/.github/workflows/job_crawler.yml
+++ b/.github/workflows/job_crawler.yml
@@ -25,8 +25,7 @@ jobs:
           
       - name: Install Playwright browsers
         run: |
-          python -m playwright install chromium
-          python -m playwright install-deps
+          playwright install --with-deps
           
       - name: Run crawler
         run: python main.py
