--- a/.github/workflows/job_crawler.yml
+++ b/.github/workflows/job_crawler.yml
@@ -8,24 +8,27 @@ on:
   workflow_dispatch:      # Cho phép chạy thủ công từ GitHub UI
 
 jobs:
-  crawl:
+  run-script:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-          
-      - name: Install dependencies
+          python-version: '3.9'
+
+      - name: Install Python dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          
+          pip install requests beautifulsoup4 datetime aiohttp playwright
+
+
       - name: Install Playwright browsers
         run: |
           playwright install --with-deps
-          
-      - name: Run crawler
+
+      - name: Run job crawler script
+
         run: python main.py
